fixed letter jumping on start animation

--- a/css/home.css
+++ b/css/home.css
@@ -29,6 +29,10 @@
     letter-spacing: 0em;
 }
 
+.logo span:not(.lines) {
+    display: inline-block;
+}
+
 .logo .hover {
     display: inline-block;
     transition: transform .3s .1s cubic-bezier(0.6, 2, 0.1, 0.3), color .2s, text-shadow .3s;
